<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:maxHeight="@dimen/_340sdp"
    app:cardCornerRadius="@dimen/_3sdp"
    app:cardElevation="@dimen/_3sdp"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/adobe_clean_bold"
            android:gravity="center"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="#F2F2F2" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_10sdp">
            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adobe_clean_regular"
                android:text="@string/female"
                android:paddingStart="@dimen/_5sdp"
                android:button="@drawable/gender_selected"
                android:textSize="@dimen/_12sdp"
                android:theme="@style/RadioButtonStyle" />
            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adobe_clean_regular"
                android:text="@string/male"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingStart="@dimen/_5sdp"
                android:button="@drawable/gender_selected"
                android:textSize="@dimen/_12sdp"
                android:theme="@style/RadioButtonStyle" />



            <RadioButton
                android:id="@+id/radioOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/adobe_clean_regular"
                android:text="@string/other"
                android:paddingStart="@dimen/_5sdp"
                android:button="@drawable/gender_selected"
                android:textSize="@dimen/_12sdp"
                android:theme="@style/RadioButtonStyle" />

        </RadioGroup>

        <EditText
            android:id="@+id/et_other_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="#F2F2F2"
            android:ellipsize="end"
            android:fontFamily="@font/adobe_clean_regular"
            android:gravity="start"
            android:hint="@string/enter_your_gender_identity_optional"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="10"
            android:enabled="false"
            android:minLines="4"
            android:padding="@dimen/_8sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textColor="@color/edit_text_color"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_Done"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#EDCB46"
                android:fontFamily="@font/adobe_clean_regular"
                android:gravity="center"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/done"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
