<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pager_bg"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:contentDescription="@null"
            android:src="@drawable/ic_back_arrow"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/app_logo"
            android:contentDescription="@null"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="@dimen/_80sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/adobe_clean_regular"
                android:text="@string/email_address"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/edit_box_shape"
                android:ellipsize="end"
                android:fontFamily="@font/adobe_clean_regular"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textColor="@color/edit_text_color"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/adobe_clean_regular"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <com.ujamaaonline.customer.components.PasswordViewWithEye
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/edit_box_shape"
                android:ellipsize="end"
                android:fontFamily="@font/adobe_clean_regular"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textColor="@color/edit_text_color"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/_12sdp"
                app:useStrikeThrough="true" />

            <TextView
                android:id="@+id/tvForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:onClick="forgetPasswordClick"
                android:text="@string/forgot_your_password"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/button_shape_yellow"
                android:fontFamily="@font/adobe_clean_regular"
                android:gravity="center"
                android:padding="@dimen/_6sdp"
                android:scrollHorizontally="true"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>